# rsmc

./: .gitignore  CHANGELOG.md  Cargo.toml  DOC.md  README.md  call_gpt.sh  clippy.toml  convert_doc_templates_with_gpt.sh  create_doc_contexts.sh  foo.rs  generate_doc.sh  perf.data  perf.data.old  script.sh  shell.nix
.github/workflows/: ci.yml  release.yml  rust.yml
assets/: chat.css  gui.css
assets/shaders/: custom_material.wgsl  my_material.glsl
docs/client/: README.md  chat.md  collider.md  gui.md  networking.md  player.md  remote_player.md  terrain.md
docs/server/: README.md  chat.md  networking.md  player.md  terrain.md
src/: blocks.rs  chunk.rs  chunk_manager.rs  controller.rs  generator.rs  input.rs  lib.rs  main.rs  mesher.rs  physics.rs  raycaster.rs  scene.rs  world.rs
src/bevy/: components.rs  events.rs  resources.rs
src/client/: main.rs  materials.rs  prelude.rs  scene.rs  states.rs
src/client/chat/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/client/collider/: components.rs  events.rs  mod.rs  systems.rs
src/client/debug_ui/: components.rs  mod.rs  resources.rs  systems.rs
src/client/gui/: mod.rs  systems.rs
src/client/networking/: messages.rs  mod.rs  systems.rs
src/client/player/: components.rs  events.rs  mod.rs  resources.rs
src/client/player/systems/: controller.rs  debug.rs  keyboard.rs  mod.rs  mouse.rs  network.rs  selection.rs  terrain.rs  world.rs
src/client/remote_player/: components.rs  events.rs  mod.rs  systems.rs
src/client/sand/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/client/terrain/: components.rs  events.rs  materials.rs  mod.rs  resources.rs  systems.rs
src/client/terrain/util/: blocks.rs  buffer_serializer.rs  chunk.rs  cross_mesher.rs  cube_mesher.rs  generator.rs  mesher.rs  mod.rs
src/collider/: components.rs  events.rs  mod.rs  systems.rs
src/my_bevy/: components.rs  events.rs  resources.rs
src/player/: components.rs  mod.rs  resources.rs  systems.rs
src/player/systems/: controller.rs  keyboard.rs  selection.rs  world.rs
src/player/util/: controller.rs  input.rs  mesher.rs  mod.rs  physics.rs  raycaster.rs
src/server/: main.rs  prelude.rs
src/server/chat/: events.rs  mod.rs  resources.rs  systems.rs
src/server/dashboard/: components.rs  events.rs  mod.rs  resources.rs  systems.rs
src/server/networking/: messages.rs  mod.rs  resources.rs  systems.rs
src/server/player/: mod.rs  resources.rs  systems.rs
src/server/terrain/: events.rs  mod.rs  resources.rs  systems.rs
src/server/terrain/util/: blocks.rs  chunk.rs  generator.rs  mod.rs
src/shared/: blocks.rs  chunk_serializer.rs  mod.rs  networking.rs  terrain.rs
src/terrain/: components.rs  mod.rs  resources.rs  systems.rs
src/terrain/util/: blocks.rs  chunk.rs  generator.rs  mesher.rs  mod.rs
