[package]
name = "rsmc"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = "0.13.2"
bevy_fps_controller = "0.2.5"
bevy_log = "0.13.2"
bevy_mod_raycast = "0.17.0"
bevy_rapier3d = "0.25.0"
cgmath = "0.18.0"
iyes_perf_ui = "0.2.3"
noise = "0.9.0"
bevy_renet = {version = "0.0.11", features = ["serde"]}
bincode = "1.3.3"
rand = "0.8.5"
renet = "0.0.15"
serde = { version = "1.0.203", features = ["derive"] }
serde-big-array = "0.5.1"
chrono = "0.4.38"
rayon = "1.10.0"

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"
