[package]
name = "rsmc"
version = "0.1.1"
edition = "2021"
rust-version = "1.83.0"

[dependencies]
bevy = "0.15.1"
bevy_fps_controller = "0.15.0"
bevy_mod_raycast = { git = "https://github.com/CuddlyBunion341/bevy_mod_raycast.git", branch = "main" }
bevy_rapier3d = "0.28.0"
cgmath = "0.18.0"
iyes_perf_ui = { git = "https://github.com/IyesGames/iyes_perf_ui.git", branch = "main" }
noise = "0.9.0"
bevy_renet = { version = "1.0.0" }
bincode = "1.3.3"
rand = "0.8.5"
renet = "1.0.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-big-array = "0.5.1"
chrono = "0.4.38"
rayon = "1.10.0"
bevy_flair = "0.1.0"
bevy-inspector-egui = "0.28.1"
renet_visualizer = { version = "1.0.0", features = ["bevy"] }

[profile.dev.package."*"]
opt-level = 3

[profile.release]
opt-level = 3

[[bin]]
name = "client"
path = "src/client/main.rs"

[[bin]]
name = "server"
path = "src/server/main.rs"

[features]
wireframe = []
debug_ui = []
renet_visualizer = []
physics_debug = []
raycast_debug = []
visual_debug = ["wireframe", "physics_debug", "raycast_debug"]
dynamic_linking = ["bevy/dynamic_linking"]
